[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["cse-vaibhav <jainvaibhav671@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.0"
pandas = "^1.5.3"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
jupyter-server-terminals = "^0.4.4"
notebook-shim = "^0.2.2"
xgboost = "^1.7.3"
lightgbm = "^3.3.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
